--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,13 +3,12 @@
 @use 'sass:map';
 
 header{
-    padding: 2rem 0;
-    background-color: variables.$primary-color;
-    @include mixin.Flex(row, space, justify, evenly);
-    width: 100%;
+    @include mixin.Flex(row, space, justify, between);
+    @include mixin.container();
+    background-color: variables.$white-color;
 
     .contactTitle{
-        @include mixin.Font(700, variables.$text-color, 1.0);
+        @include mixin.Font(700, variables.$black-color, 1.0);
         margin: 0 0 1rem 0;
     }
     .email{width: 30%;}
@@ -34,12 +33,39 @@ header{
                 width: 2rem;
                 height: 2rem;
                 border-radius: 100px;
-                color: variables.$primary-color;
+                color: variables.$white-color;
                 margin: 0 0.2rem;
             }
             @each $id, $color in variables.$socialMediaColors{
                 a:nth-of-type(#{$id}) i{background-color: $color;}
             }
         }
+    }
+}
+
+.menu{
+    @include mixin.container();
+    @include mixin.Flex(row);
+    background-color: variables.$primary-color;
+    color: variables.$white-color;
+
+    ul{
+        @include mixin.Flex();
+        padding: 0;
+
+        li{
+            cursor: pointer;
+            margin: 0  2rem 0 0;
+            font-size: 1.2rem;
+            list-style: none;
+
+            &:hover{color: variables.$secondary-color;}
+        }
+
+        .active{
+            color: variables.$secondary-color;
+            &:hover{color: variables.$white-color;}
+        }
+        
     }
 }
