--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,5 @@
-$primary-color: #fff;
-$text-color: #000;
+$white-color: #fff;
+$black-color: #000;
+$primary-color: #008ebc;
+$secondary-color: #ffeb3b;
 $socialMediaColors: (1 : #5051B9, 2 : #f00, "gmail" : #D44C3D, "whatsapp" : #4CCB5A);
