--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -1,5 +1,16 @@
 @use "variables";
 
+@mixin container {
+    @media (min-width:768px)and(max-width:992px){
+        padding: 2rem 2.5rem;
+        width: calc(100% - 5rem);
+    }
+    @media (min-width:993px){
+        padding: 2rem 5rem;
+        width: calc(100% - 10rem);
+    }
+}
+
 @mixin center ($alignJustify){
     @if $alignJustify == justify{justify-content: center;}
     @else if $alignJustify == align {align-items: center;}
