--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,3 +1,7 @@
+@use 'mixin';
+    .show-top{
+        top: 0px!important;
+    }
 @media (max-width:767px){
     header{
         justify-content: space-between;
@@ -8,6 +12,20 @@
         display: none;
     }
     header .toggle{display: block;}
+    .menu{
+        transition: all .5s linear;
+        position: relative;
+        top: -190px;
+        z-index: -1;
+
+        ul{      
+            @include mixin.Flex(column);
+
+            li{
+                margin: 0 0 0.5rem 0;
+            }
+        }
+    }
 }
 @media (min-width: 768px){
     header .toggle{
