--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,14 @@
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   color: rgba(0, 0, 0, 0.7);
-  word-break: break-all;
 }
 
 p {
   margin: 0.1rem;
+}
+
+li {
+  list-style: none;
 }
 
 a {
@@ -22,8 +25,8 @@ header {
 }
 @media (min-width: 768px) and (max-width: 992px) {
   header {
-    padding: 2rem 2.5rem;
-    width: calc(100% - 5rem);
+    padding: 2rem 2rem;
+    width: calc(100% - 4rem);
   }
 }
 @media (min-width: 993px) {
@@ -36,7 +39,6 @@ header .contactTitle {
   font-family: "Poppins", sans-serif;
   font-weight: 700;
   color: black;
-  word-break: break-all;
   margin: 0 0 1rem 0;
 }
 header .email {
@@ -48,6 +50,9 @@ header .logo {
 }
 header .logo img {
   width: 100%;
+}
+header .email {
+  word-break: break-all;
 }
 header .email i {
   color: #D44C3D;
@@ -97,8 +102,8 @@ header .contact .socialMediaIcons a:nth-of-type(whatsapp) i {
 }
 @media (min-width: 768px) and (max-width: 992px) {
   .menu {
-    padding: 2rem 2.5rem;
-    width: calc(100% - 5rem);
+    padding: 2rem 2rem;
+    width: calc(100% - 4rem);
   }
 }
 @media (min-width: 993px) {
@@ -111,14 +116,29 @@ header .contact .socialMediaIcons a:nth-of-type(whatsapp) i {
   display: flex;
   padding: 0;
 }
-.menu ul li {
+.menu ul .list-item {
+  width: auto;
   cursor: pointer;
-  margin: 0 2rem 0 0;
-  font-size: 1.2rem;
-  list-style: none;
+  margin: 0 3.6rem 0 0;
+  font-size: 1.1rem;
+  position: relative;
 }
-.menu ul li:hover {
+.menu ul .list-item:hover {
   color: #ffeb3b;
+}
+.menu ul .list-item .menu-dropdown {
+  position: absolute;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+}
+.menu ul .list-item .menu-dropdown li {
+  padding: 0.2rem;
+  font-size: 1rem;
+  width: calc(100% + 1rem);
+  word-wrap: break-word;
+  background-color: #fff;
+  color: #000;
 }
 .menu ul .active {
   color: #ffeb3b;
@@ -129,10 +149,17 @@ header .contact .socialMediaIcons a:nth-of-type(whatsapp) i {
 
 .show-top {
   top: 0px !important;
+  z-index: 0 !important;
+  content-visibility: inherit !important;
+}
+
+.hide {
+  display: none !important;
 }
 
 @media (max-width: 767px) {
   header {
+    display: flex;
     justify-content: space-between;
     padding: 2rem;
     width: calc(100% - 4rem);
@@ -147,9 +174,10 @@ header .contact .socialMediaIcons a:nth-of-type(whatsapp) i {
   }
 
   .menu {
-    transition: all 0.5s linear;
+    transition: all 0.3s linear;
     position: relative;
-    top: -190px;
+    top: -6rem;
+    content-visibility: hidden;
     z-index: -1;
   }
   .menu ul {
@@ -158,6 +186,10 @@ header .contact .socialMediaIcons a:nth-of-type(whatsapp) i {
   }
   .menu ul li {
     margin: 0 0 0.5rem 0;
+  }
+
+  .menu-dropdown {
+    position: relative !important;
   }
 }
 @media (min-width: 768px) {
