--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -17,7 +17,11 @@ header{
         width: auto;
         img{width: 100%;}
     }
-    .email i{color: map.get(variables.$socialMediaColors, gmail);}
+    .email{
+        word-break: break-all;
+
+        i{color: map.get(variables.$socialMediaColors, gmail);}
+    }
     .phone i{
             color: map.get(variables.$socialMediaColors, whatsapp);
             transform: rotate(90deg)
@@ -53,19 +57,34 @@ header{
         @include mixin.Flex();
         padding: 0;
 
-        li{
+        .list-item{
+            width: auto;
             cursor: pointer;
-            margin: 0  2rem 0 0;
-            font-size: 1.2rem;
-            list-style: none;
+            margin: 0 3.6rem 0 0;
+            font-size: 1.1rem;
+            position: relative;
 
             &:hover{color: variables.$secondary-color;}
+
+            .menu-dropdown{
+                position: absolute;
+                width: auto;
+                @include mixin.Flex(column);
+
+                li{
+                    padding: 0.2rem;
+                    font-size: 1rem;
+                    width: calc(100% + 1rem);
+                    word-wrap: break-word;
+                    background-color: variables.$white-color;
+                    color: variables.$black-color;
+                }
+            }
         }
 
         .active{
             color: variables.$secondary-color;
             &:hover{color: variables.$white-color;}
-        }
-        
+        }       
     }
 }
