--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,9 +4,9 @@
 
 header{
     @include mixin.Flex(row, space, justify, between);
-    @include mixin.container();
+    padding: 2rem 5rem;
+    width: calc(100% - 10rem)!important;
     background-color: variables.$white-color;
-
     .contactTitle{
         @include mixin.Font(700, variables.$black-color, 1.0);
         margin: 0 0 1rem 0;
@@ -31,7 +31,6 @@ header{
         .text p i{margin-right: 0.4rem;}
         .socialMediaIcons{
             @include mixin.Flex(row, center, justify);
-
             i{
                 @include mixin.Flex(row, center, alignJustify);
                 width: 2rem;
@@ -45,43 +44,44 @@ header{
             }
         }
     }
+    .toggle{
+        cursor: pointer;
+    }
 }
-
 .menu{
-    @include mixin.container();
     @include mixin.Flex(row);
     background-color: variables.$primary-color;
     color: variables.$white-color;
-
+    padding: 0 0 0 5rem;
+    width: calc(100% - 5rem)!important;
     ul{
         @include mixin.Flex();
         padding: 0;
-
+        text-transform: uppercase;
         .list-item{
             width: auto;
             cursor: pointer;
             margin: 0 3.6rem 0 0;
             font-size: 1.1rem;
             position: relative;
-
+            @include mixin.Font(600, variables.$white-color, 1.0, 1.1rem);
+            span{display: none;}
             &:hover{color: variables.$secondary-color;}
-
             .menu-dropdown{
                 position: absolute;
                 width: auto;
                 @include mixin.Flex(column);
-
+                padding: 0;
+                margin-top: 1rem;
                 li{
-                    padding: 0.2rem;
-                    font-size: 1rem;
                     width: calc(100% + 1rem);
                     word-wrap: break-word;
                     background-color: variables.$white-color;
-                    color: variables.$black-color;
+                    @include mixin.Font(400, variables.$black-color, 1.0);
+                    @include mixin.boxShadow(0.5rem,0.5rem,1px);
                 }
             }
         }
-
         .active{
             color: variables.$secondary-color;
             &:hover{color: variables.$white-color;}
