--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -1,16 +1,5 @@
 @use "variables";
 
-@mixin container {
-    @media (min-width:768px)and(max-width:992px){
-        padding: 2rem 2rem;
-        width: calc(100% - 4rem);
-    }
-    @media (min-width:993px){
-        padding: 2rem 5rem;
-        width: calc(100% - 10rem);
-    }
-}
-
 @mixin center ($alignJustify){
     @if $alignJustify == justify{justify-content: center;}
     @else if $alignJustify == align {align-items: center;}
@@ -33,8 +22,15 @@
     @else if $justify == space{@include space($space)}
 }
 
-@mixin Font($weight, $color, $opacity){
+@mixin Font($weight, $color, $opacity, $size:1rem){
     font-family: 'Poppins', sans-serif;
     font-weight: $weight;
     color: rgba($color, $opacity);
+    font-size: $size;
+}
+
+@mixin boxShadow ($topBottom, $left, $spread){
+    padding: $topBottom 0 $topBottom $left;
+    -webkit-box-shadow: 0px 4px 8px $spread rgba(0,0,0,0.16); 
+    box-shadow: 0px 4px 8px $spread rgba(0,0,0,0.16);
 }
