--- a/scss/_carousel.scss
+++ b/scss/_carousel.scss
@@ -7,6 +7,7 @@
     align-items: center;
     width: calc(100% - 2rem);
     max-width: 1500px;
+    height: 550px;
     background-image: url("../img/slide-1.webp");
     background-position: center;
     background-size: 110%;
