--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -34,3 +34,12 @@
     -webkit-box-shadow: 0px 4px 8px $spread rgba(0,0,0,0.16); 
     box-shadow: 0px 4px 8px $spread rgba(0,0,0,0.16);
 }
+
+@function color ($color, $type){
+    @if map-has-key(variables.$principalColors, $color) {
+        $curr_color: map-get(variables.$principalColors, $color);
+        @if map-has-key($curr_color, $type) {
+          @return map-get($curr_color, $type);
+        }
+    }
+}
