--- a/css/styles.css
+++ b/css/styles.css
@@ -1,346 +1,17 @@
-.container {
-  max-width: 1500px;
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  color: rgba(0, 0, 0, 0.7);
-  font-size: 1rem;
-}
+/* Error: expected "{".
+ *   ,
+ * 8 | @use 'projetos';
+ *   |                ^
+ *   '
+ *   scss\styles.scss 8:16  root stylesheet */
 
-p {
-  margin: 0.1rem;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: expected \"{\".\a   \2577 \a 8 \2502  @use 'projetos';\d\a   \2502                 ^\a   \2575 \a   scss\\styles.scss 8:16  root stylesheet";
 }
-
-li {
-  list-style: none;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  padding: 2rem 5rem;
-  width: calc(100% - 10rem) !important;
-  background-color: #fff;
-}
-header .contactTitle {
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
-  color: black;
-  font-size: 1rem;
-  margin: 0 0 1rem 0;
-}
-header .email {
-  width: 30%;
-}
-header .logo {
-  max-width: 13rem;
-  width: auto;
-}
-header .logo img {
-  width: 100%;
-}
-header .email {
-  word-break: break-all;
-}
-header .email i {
-  color: #D44C3D;
-}
-header .phone i {
-  color: #4CCB5A;
-  transform: rotate(90deg);
-}
-header .contact {
-  display: flex;
-  flex-direction: column;
-}
-header .contact .text p i {
-  margin-right: 0.4rem;
-}
-header .contact .socialMediaIcons {
-  display: flex;
-  justify-content: center;
-}
-header .contact .socialMediaIcons i {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 2rem;
-  height: 2rem;
-  border-radius: 100px;
-  color: #fff;
-  margin: 0 0.2rem;
-}
-header .contact .socialMediaIcons a:nth-of-type(1) i {
-  background-color: #5051B9;
-}
-header .contact .socialMediaIcons a:nth-of-type(2) i {
-  background-color: #f00;
-}
-header .contact .socialMediaIcons a:nth-of-type(gmail) i {
-  background-color: #D44C3D;
-}
-header .contact .socialMediaIcons a:nth-of-type(whatsapp) i {
-  background-color: #4CCB5A;
-}
-header .toggle {
-  cursor: pointer;
-  display: none;
-}
-
-.menu {
-  display: flex;
-  background-color: #008ebc;
-  color: #fff;
-  padding: 0 0 0 5rem;
-  width: calc(100% - 5rem) !important;
-}
-.menu ul {
-  display: flex;
-  padding: 0;
-  text-transform: uppercase;
-}
-.menu ul .list-item {
-  width: auto;
-  cursor: pointer;
-  margin: 0 3.6rem 0 0;
-  font-size: 1.1rem;
-  position: relative;
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  color: white;
-  font-size: 1.1rem;
-}
-.menu ul .list-item span {
-  display: none;
-}
-.menu ul .list-item:hover {
-  color: #ffeb3b;
-}
-.menu ul .list-item .menu-dropdown {
-  position: absolute;
-  width: auto;
-  display: flex;
-  flex-direction: column;
-  padding: 0;
-  margin-top: 1rem;
-  z-index: 1;
-}
-.menu ul .list-item .menu-dropdown li {
-  width: calc(100% + 1rem);
-  word-wrap: break-word;
-  background-color: #fff;
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  color: black;
-  font-size: 1rem;
-  padding: 0.5rem 0 0.5rem 0.5rem;
-  -webkit-box-shadow: 0px 4px 8px 1px rgba(0, 0, 0, 0.16);
-  box-shadow: 0px 4px 8px 1px rgba(0, 0, 0, 0.16);
-}
-.menu ul .active {
-  color: #ffeb3b;
-}
-.menu ul .active:hover {
-  color: #fff;
-}
-
-.banner {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: calc(100% - 2rem);
-  max-width: 1500px;
-  height: 550px;
-  background-image: url("../img/slide-1.webp");
-  background-position: center;
-  background-size: 110%;
-  padding: 0 1rem;
-  position: relative;
-  transition: all 0.4s linear;
-}
-.banner i {
-  cursor: pointer;
-  color: #fff;
-}
-
-.ensinos {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-.ensinos .cards {
-  display: flex;
-  width: 90%;
-}
-.ensinos .cards .card {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  justify-content: space-between;
-  text-align: center;
-  padding: 1.5rem 0 2.5rem 0;
-  width: 40%;
-  height: 30rem;
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
-  color: white;
-  font-size: 1rem;
-}
-.ensinos .cards .card img {
-  width: 8rem !important;
-  height: 6rem !important;
-}
-.ensinos .cards .card p {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  color: white;
-  font-size: 1.2rem;
-}
-.ensinos .cards .card button {
-  cursor: pointer;
-  padding: 0.7rem 2.5rem;
-  border-radius: 1.4rem;
-  text-transform: uppercase;
-  border: none;
-  outline: none;
-  background-color: #34d134;
-  transition: all 0.2s linear;
-  font-family: "Poppins", sans-serif;
-  font-weight: 600;
-  color: white;
-  font-size: 1.2rem;
-}
-.ensinos .cards .card button:hover {
-  background-color: #51d351;
-}
-.ensinos .cards .card:nth-of-type(1) {
-  background-color: #5caac4;
-}
-.ensinos .cards .card:nth-of-type(2) {
-  background-color: #e4d552;
-}
-.ensinos .cards .card:nth-of-type(3) {
-  background-color: #dd5c5c;
-}
-
-/*Class Menu Responsive*/
-.show-top {
-  top: 0px !important;
-  z-index: 0 !important;
-  content-visibility: inherit !important;
-}
-
-.hide {
-  display: none !important;
-}
-
-@media (max-width: 992px) {
-  header {
-    padding: 2rem;
-    width: calc(100% - 4rem) !important;
-  }
-
-  .menu {
-    padding: 0 0 0 2rem;
-    width: calc(100% - 2rem) !important;
-  }
-
-  .cards {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
-  .cards .card {
-    width: 50% !important;
-  }
-}
-@media (max-width: 768px) {
-  header {
-    display: flex;
-    justify-content: space-between;
-    padding: 2rem;
-    width: calc(100% - 4rem);
-  }
-  header div:not(div:nth-of-type(1)), header .socialMedia {
-    display: none;
-  }
-  header .toggle {
-    display: block;
-  }
-
-  .menu {
-    transition: all 0.3s linear;
-    position: relative;
-    top: -6rem;
-    content-visibility: hidden;
-    z-index: -1;
-    width: calc(100% - 2rem) !important;
-  }
-  .menu ul {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-  }
-  .menu ul .list-item {
-    margin: 0.5rem 0 !important;
-    width: calc(100% - 2rem) !important;
-    font-size: 1.3rem;
-  }
-  .menu ul .list-item .menu-dropdown {
-    background-color: #fff;
-    position: relative !important;
-    margin-top: 1rem;
-    left: -2rem;
-    width: calc(100% + 4rem) !important;
-  }
-  .menu ul .list-item .menu-dropdown li {
-    width: calc(100% - 2rem) !important;
-    padding: 1rem 0 1rem 2rem;
-    -webkit-box-shadow: 0px 4px 8px 5px rgba(0, 0, 0, 0.16);
-    box-shadow: 0px 4px 8px 5px rgba(0, 0, 0, 0.16);
-  }
-  .menu ul .dropdown {
-    position: relative;
-  }
-  .menu ul .dropdown span {
-    display: block;
-    position: absolute;
-    left: 90%;
-    top: 0;
-    color: #ffeb3b;
-  }
-
-  .banner {
-    height: 400px;
-  }
-
-  .cards {
-    width: 100% !important;
-  }
-}
-@media (max-width: 577px) {
-  .banner {
-    height: 300px;
-  }
-
-  .cards {
-    width: 100% !important;
-    display: flex;
-    flex-direction: column;
-  }
-  .cards .card {
-    width: 100% !important;
-  }
-}
-@media (max-width: 319px) {
-  .banner {
-    display: none;
-  }
-}
-
-/*# sourceMappingURL=styles.css.map */
