--- a/scss/_ensinos.scss
+++ b/scss/_ensinos.scss
@@ -2,6 +2,8 @@
 @use 'mixin';
 @use 'sass:map';
 
+@keyframes topToBottom {from{top: -100%;}to{top: 0%;}}
+
 .ensinos{
     width: 100%;
     @include mixin.Flex(row, center, justify);
@@ -15,8 +17,13 @@
             padding: 1.5rem 0 2.5rem 0;
             width: 40%;
             height: 30rem;    
+            overflow: hidden;
             @include mixin.Font(700, variables.$white-color, 1.0);
+            &:hover img{
+                animation: topToBottom 0.5s;
+            }
             img{
+                position: relative;
                 width: 9rem!important;
                 height: 7rem!important;
             }
@@ -30,8 +37,14 @@
                 }
             }
         }
-        .card:nth-of-type(1){background-color: mixin.color("blue", "light")}
+        .card:nth-of-type(1){
+            background-color: mixin.color("blue", "light");
+            border-radius: 0.8rem 0 0 0.8rem;
+        }
         .card:nth-of-type(2){background-color: mixin.color("yellow", "light");}
-        .card:nth-of-type(3){background-color: mixin.color("red", "light");}
+        .card:nth-of-type(3){
+            background-color: mixin.color("red", "light");
+            border-radius: 0 0.8rem 0.8rem 0;
+        }
     }
 }
